--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,7 +81,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ll_title"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_konser"
+        android:id="@+id/rv_cafe"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
